- Fixed static analysis - Rewrote doLast actions to separate tasks - Fixed tests